Please let us OJT
Noice

--- a/public/Archive1.css
+++ b/public/Archive1.css
@@ -264,6 +264,7 @@ span{
         background-color: #2F3C7E;
         padding-bottom: 10%;
         color: #FBEAEB;
+        padding-top: 20%;
     }
     
     .banner h1{
