--- a/public/Sundayservice.css
+++ b/public/Sundayservice.css
@@ -496,14 +496,14 @@ a img{
   .navbar .menu-list{
     position: fixed;
     height: 100vh;
-    width: 100%;
+    width: 70%;
     max-width: 400px;
     left: -100%;
     top: 0px;
     display: block;
     padding: 40px 0;
     text-align: center;
-    background: #222;
+    background: #2F3C7E;
     transition: all 0.3s ease;
   }
   .navbar.show .menu-list{
@@ -696,13 +696,36 @@ a img{
     }
 
     .bruh{
-        max-height: 90px;
+        max-height: 120px;
         display: flex;
         overflow-x: auto;
         margin-left: 5%;
         margin-right: 7%;
         margin-top: 2%;
-        
+        overflow-y: hidden;
+    }
+
+    /* width */
+    .bruh::-webkit-scrollbar {
+        width: 1px;
+    }
+
+/* Track */
+    .bruh::-webkit-scrollbar-track {
+      width: 1px;
+        background: transparent;
+    }
+
+/* Handle */
+    .bruh::-webkit-scrollbar-thumb {
+      width: 20px;
+      background: transparent;
+    }
+
+/* Handle on hover */
+    .bruh::-webkit-scrollbar-thumb:hover {
+      width: 1px;
+      background: transparent;
     }
 
     .bruh a{
