--- a/public/Wildfire.css
+++ b/public/Wildfire.css
@@ -505,14 +505,14 @@ a{
     .navbar .menu-list{
       position: fixed;
       height: 100vh;
-      width: 100%;
+      width: 70%;
       max-width: 400px;
       left: -100%;
       top: 0px;
       display: block;
       padding: 40px 0;
       text-align: center;
-      background: #222;
+      background: black;
       transition: all 0.3s ease;
     }
     .navbar.show .menu-list{
