--- a/public/AnnounceTrial.css
+++ b/public/AnnounceTrial.css
@@ -155,7 +155,7 @@ a{
     margin-top: 3%;
 }
 
-.wildfire{
+.Wildfire{
     background-color: yellow;
     padding: 1%;
     font-size: 0.8vw;
@@ -163,7 +163,7 @@ a{
     margin: 0.5%;
 }
 
-.spearhead{
+.Spearhead{
     background-color: #2C5F2DFF;
     color: #FFE77AFF;
     padding: 1%;
@@ -181,7 +181,7 @@ a{
     margin: 0.5%;
 }
 
-.sundayService{
+.SundayService{
     background-color: #2F3C7E;
     color: #FBEAEB;
     padding: 1%;
@@ -190,7 +190,7 @@ a{
     margin: 0.5%;
 }
 
-.j12Kids{
+.J12Kids{
     background-color: #FF69B4;
     color: #00FFFF;
     padding: 1%;
@@ -199,7 +199,7 @@ a{
     margin: 0.5%;
 }
 
-.married{
+.MarriedForLife{
     background-color: #f7c5cc;
     color: #cc313d;
     padding: 1%;
@@ -208,7 +208,7 @@ a{
     margin: 0.5%;
 }
 
-.mentoring{
+.Mentoring{
   background-color: #191825;
   color: #FFA3FD;
   padding: 1%;
@@ -217,7 +217,7 @@ a{
   margin: 0.5%;
 }
 
-.sol{
+.SOLClass{
   background-color: #1868AE;
   color: #C6D7EB;
   padding: 1%;
@@ -226,7 +226,7 @@ a{
   margin: 0.5%;
 }
 
-.lifeclass{
+.LifeClass{
   background-color: #3EB489;
   color: white;
   padding: 1%;
