--- a/public/Sundayservice.css
+++ b/public/Sundayservice.css
@@ -47,6 +47,7 @@ a img{
     color: white;
     padding-top: 10%;
     padding-bottom: 5%;
+    margin-top: 5%;
 }
 
 #noice{
@@ -406,82 +407,9 @@ a img{
   font-size: 1.7vw;
 }
 
-
-
-/* ==================================================== */
-
-@media (max-width: 1230px) {
-  .content{
-    padding: 0 60px;
-  }
-}
-@media (max-width: 1100px) {
-  .content{
-    padding: 0 40px;
-  }
-}
-@media (max-width: 900px) {
-  .content{
-    padding: 0 30px;
-  }
-}
-@media (max-width: 868px) {
-  body.disabled{
-    overflow: hidden;
-  }
-  .icon{
-    display: block;
-  }
-  .icon.hide{
-    display: none;
-    z-index: 2;
-  }
-  .navbar .menu-list{
-    position: fixed;
-    height: 100vh;
-    width: 70%;
-    max-width: 400px;
-    left: -100%;
-    top: 0px;
-    display: block;
-    padding: 40px 0;
-    text-align: center;
-    background: #2F3C7E;
-    transition: all 0.3s ease;
-  }
-  .navbar.show .menu-list{
-    left: 0%;
-  }
-  .navbar .menu-list li{
-    margin-top: 45px;
-  }
-  .navbar .menu-list li a{
-    font-size: 23px;
-    margin-left: -100%;
-    transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  }
-  .navbar.show .menu-list li a{
-    margin-left: 0px;
-  }
-}
-
 /* ==================================================== */
 
 @media (max-width: 500px) {
-    .navbar .logo img{
-      width: 40%;
-    }
-
-    
-    a img{
-      width: 100%;
-      max-width: 50px;
-    }
-  
-    .icon img{
-      width: 100%;
-      max-width: 40px;
-    }
 
     .banner{
         width: 100%;
@@ -490,6 +418,7 @@ a img{
         color: white;
         padding-top: 20%;
         padding-bottom: 10%;
+        margin-top: 15%;
     }
     
     #noice{
