--- a/public/NavbarMentoring.css
+++ b/public/NavbarMentoring.css
@@ -1,8 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
-
-
-
 header{
   z-index: 999;
   position: fixed;
@@ -12,9 +7,9 @@ header{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: black;
+  background: #191825;
   box-shadow: 0 5px 25px rgb(0 0 0 / 20%);
-  padding: 0 100px;
+  padding: 0 1%;
   transition: 0.6s;
 }
 
@@ -25,6 +20,7 @@ header .logo{
   text-transform: uppercase;
   text-decoration: none;
   letter-spacing: 2px;
+  margin-left: 6.5%;
 }
 
 header .navigation{
@@ -32,6 +28,7 @@ header .navigation{
   line-height: 75px;
   transition: 0.6s;
   transition-property: line-height;
+  margin-right: 8.5%;
 }
 
 header.sticky .navigation{
@@ -55,13 +52,13 @@ header .navigation .menu{
 }
 
 .menu-item > a:hover{
-  color: #e23c52;
+  color: #FFA3FD;
   transition: 0.3s;
 }
 
 .menu-item .sub-menu{
   position: absolute;
-  background: black;
+  background: #191825;
   top: 74px;
   line-height: 40px;
   list-style: none;
@@ -99,7 +96,12 @@ header.sticky .menu-item .sub-menu{
 }
 
 .menu-item .sub-menu .sub-item:hover{
-  background: #e23c52;
+  background: #FFA3FD;
+  border: none;
+}
+
+.menu-item .sub-menu .sub-item a:hover{
+  color: #191825;
 }
 
 .menu-item .sub-menu .sub-item:last-child:hover{
@@ -124,7 +126,7 @@ header.sticky .menu-item .sub-menu{
 
 .more:hover .more-menu{
   pointer-events: all;
-  transform: translateY(0);
+  transform: translateY( 0);
   opacity: 1;
 }
 
@@ -145,15 +147,15 @@ header.sticky .menu-item .sub-menu{
 @media (max-width: 1060px){
 
 
-  header .logo{
-    font-size: 4vw;
+  header .navigation{
+    margin-right: 0%;
   }
 
   header .navigation .menu{
     position: fixed;
     display: block;
-    background: black;
-    min-width: 350px;
+    background: #cc313d;
+    min-width: 250px;
     height: 100vh;
     top: 0;
     right: -100%;
@@ -177,8 +179,6 @@ header.sticky .menu-item .sub-menu{
     position: relative;
   }
 
-
-
   .menu-item .sub-menu{
     opacity: 1;
     position: relative;
@@ -189,8 +189,6 @@ header.sticky .menu-item .sub-menu{
     overflow: hidden;
     display: none;
   }
-  
- 
 
   header.sticky .menu-item .sub-menu{
     top: 0;
@@ -256,6 +254,7 @@ header.sticky .menu-item .sub-menu{
     background-position: center;
     cursor: pointer;
     display: block;
+    margin-right: 10%;
   }
 
   header{
