--- a/public/gallery1.css
+++ b/public/gallery1.css
@@ -1,12 +1,29 @@
-@import url('https://fonts.googleapis.com/css2?family=Andika:ital,wght@0,400;0,700;1,400;1,700&family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Quicksand';
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
     scroll-behavior: smooth;
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  ::-webkit-scrollbar-track {
+    background: #8aaae5;
+  }
+  ::-webkit-scrollbar-thumb {
+    background: white;
+  }
+  ::selection{
+  background: rgb(0,123,255,0.3);
+  }
+
 
 .wholePage{
     display: block;
@@ -23,9 +40,10 @@
 }
 
 .header{
-    padding-top: 2%;
+    margin-top: 3%;
+    padding-top: 4%;
     padding-bottom: 5%;
-    background-image: linear-gradient(rgba(204, 49, 61, 0.7),rgba(204, 49, 61, 0.7)), url(Gallery/Misc.\ Shezz/tulips.jpg);
+    background-image: linear-gradient(rgba(138, 170, 229, 0.8),rgba(138, 170, 229, 0.8)), url(MediaIMGs/banner.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -88,10 +106,10 @@
     font-size: 3vw;
     font-family: 'Source Code Pro';
     text-align: center;
-    color: #990011;
     margin-right: 33%;
     margin-left: 33%;
-    background-color: #FCF6F5;
+    background-color: white;
+    color: #8aaae5;
 }
 
 .home img{  
@@ -119,8 +137,23 @@
 }
 
 @media (max-width: 500px) {
+    .gallery{
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px,  1fr));
+        grid-gap: 20px;
+    }
+
+    .gallery img{
+        width: 100%;
+        transition-delay: 200ms;
+        box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+        transition: box-shadow 0.3s ease-in-out;
+        margin-left: 0%;
+    }
+
     .header{
-        padding-top: 2%;
+        margin-top: 10%;
+        padding-top: 9%;
         padding-bottom: 12%;
     }
 
