--- a/public/NavbarMentoring.css
+++ b/public/NavbarMentoring.css
@@ -154,7 +154,7 @@ header.sticky .menu-item .sub-menu{
   header .navigation .menu{
     position: fixed;
     display: block;
-    background: #cc313d;
+    background: #191825;
     min-width: 250px;
     height: 100vh;
     top: 0;
