--- a/public/LifeClassNavBar.css
+++ b/public/LifeClassNavBar.css
@@ -1,150 +1,267 @@
-/* custom scroll bar */
-::-webkit-scrollbar {
-    width: 10px;
+header{
+  z-index: 999;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #3EB489;
+  box-shadow: 0 5px 25px rgb(0 0 0 / 20%);
+  padding: 0 1%;
+  transition: 0.6s;
 }
-::-webkit-scrollbar-track {
-    background: #3EB489;
+
+header .logo{
+  color: #fff;
+  font-size: 1.8em;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-decoration: none;
+  letter-spacing: 2px;
+  margin-left: 6.5%;
 }
-::-webkit-scrollbar-thumb {
-    background: white;
+
+header .navigation{
+  position: relative;
+  line-height: 75px;
+  transition: 0.6s;
+  transition-property: line-height;
+  margin-right: 8.5%;
 }
-::selection{
-    background: rgb(0,123,255,0.3);
+
+header.sticky .navigation{
+  line-height: 60px;
 }
-.content{
-    max-width: 1550px;
-    margin: auto;
-    padding: 0 30px;
+
+header .navigation .menu{
+  position: relative;
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  user-select: none;
 }
-.navbar{
+
+.menu-item > a{
+  color: #fff;
+  font-size: 1em;
+  text-decoration: none;
+  margin: 20px;
+  padding: 25px 0;
+}
+
+.menu-item > a:hover{
+  color: white;
+  transition: 0.3s;
+}
+
+.menu-item .sub-menu{
+  position: absolute;
+  background: #3EB489;
+  top: 74px;
+  line-height: 40px;
+  list-style: none;
+  border-radius: 0 0 8px 8px;
+  box-shadow: 0 5px 25px rgb(0 0 0 / 20%);
+  pointer-events: none;
+  transform: translateY(20px);
+  opacity: 0;
+  transition: 0.3s;
+  transition-property: transform, opacity;
+}
+
+header.sticky .menu-item .sub-menu{
+  top: 60px;
+}
+
+.menu-item:hover .sub-menu{
+  pointer-events: all;
+  transform: translateY(0);
+  opacity: 1;
+}
+
+.menu-item .sub-menu .sub-item{
+  position: relative;
+  padding: 7px 0;
+  cursor: pointer;
+  box-shadow: inset 0px -30px 5px -30px rgba(255, 255, 255, 0.2);
+}
+
+.menu-item .sub-menu .sub-item a{
+  color: #fff;
+  font-size: 1em;
+  text-decoration: none;
+  padding: 15px 30px;
+}
+
+.menu-item .sub-menu .sub-item:hover{
+  background: white;
+  border: none;
+}
+
+.menu-item .sub-menu .sub-item a:hover{
+  color: #191825;
+}
+
+.menu-item .sub-menu .sub-item:last-child:hover{
+  border-radius: 0 0 8px 8px;
+}
+
+.more .more-menu{
+  position: absolute;
+  background: #23252B;
+  list-style: none;
+  top: 0;
+  left: 100%;
+  white-space: nowrap;
+  border-radius: 0 8px 8px 8px;
+  overflow: hidden;
+  pointer-events: none;
+  transform: translateY(20px);
+  opacity: 0;
+  transition: 0.3s;
+  transition-property: transform, opacity;
+}
+
+.more:hover .more-menu{
+  pointer-events: all;
+  transform: translateY( 0);
+  opacity: 1;
+}
+
+.more .more-menu .more-item{
+  padding: 7px 0;
+  box-shadow: inset 0px -30px 5px -30px rgba(255, 255, 255, 0.2);
+  transition: 0.3s;
+}
+
+.more .more-menu .more-item:hover{
+  background: #4080EF;
+}
+
+.menu-btn{
+  display: none;
+}
+
+@media (max-width: 1060px){
+
+
+  header .navigation{
+    margin-right: 0%;
+  }
+
+  header .navigation .menu{
     position: fixed;
-    width: 100%;
-    z-index: 2;
-    padding: 25px 0;
-    transition: all 0.3s ease;
-}
-.navbar.sticky{
-    color: #C6D7EB;
+    display: block;
     background: #3EB489;
-    padding: 10px 0;
-    box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.1);
-}
-.navbar .content{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.navbar .logo img{
-    width: 70%;
-}
+    min-width: 250px;
+    height: 100vh;
+    top: 0;
+    right: -100%;
+    padding: 90px 50px;
+    visibility: hidden;
+    overflow-y: auto;
+    transition: 0.5s;
+    transition-property: right, visibility;
+  }
 
-.navbar .menu-list{
-    display: inline-flex;
-}
+  header.sticky .navigation{
+    line-height: 75px;
+  }
 
-.menu-list li{
-    list-style: none;
-}
+  header .navigation .menu.active{
+    right: 0;
+    visibility: visible;
+  }
 
-.menu-list li a{
-    color: #fff;
-    font-size: 1.3vw;
-    margin-left: 25px;
-    text-decoration: none;
-    transition: all 0.3s ease;
-}
-.menu-list li a:hover{
-    color: orange;
-    z-index: 2;
-}
-  
-.icon{
-    cursor: pointer;
+  .menu-item{
+    position: relative;
+  }
+
+  .menu-item .sub-menu{
+    opacity: 1;
+    position: relative;
+    top: 0;
+    transform: translateX(10px);
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 5px;
+    overflow: hidden;
     display: none;
-}
+  }
 
-.icon img{
-    width: 100%;
-    max-width: 50px;
-}
+  header.sticky .menu-item .sub-menu{
+    top: 0;
+  }
 
-.menu-list .cancel-btn{
+  .menu-item:hover .sub-menu{
+    transform: translateX(10px);
+  }
+
+  .menu-item .sub-menu .sub-item{
+    box-shadow: none;
+  }
+
+  .menu-item .sub-menu .sub-item:hover{
+    background: none;
+  }
+
+  .menu-item .sub-menu .sub-item a:hover{
+    color: #4080EF;
+    transition: 0.3s;
+  }
+
+  .more .more-menu{
+    opacity: 1;
+    position: relative;
+    left: 0;
+    transform: translateY(0);
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 5px;
+    display: none;
+  }
+
+  .more .more-menu .more-item{
+    box-shadow: none;
+  }
+
+  .more .more-menu .more-item:hover{
+    background: none;
+  }
+
+  .more .more-menu .more-item a{
+    margin-left: 20px;
+  }
+
+  .close-btn{
     position: absolute;
-    right: 30px;
-    top: 20px;
-    z-index: 2;
+    background: url(HeadnFooter/closewindow.png)no-repeat;
+    width: 40px;
+    height: 40px;
+    background-size: 25px;
+    background-position: center;
+    top: 0;
+    left: 0;
+    margin: 25px;
+    cursor: pointer;
+  }
+
+  .menu-btn{
+    background: url(HeadnFooter/menu.png)no-repeat;
+    width: 40px;
+    height: 40px;
+    background-size: 30px;
+    background-position: center;
+    cursor: pointer;
+    display: block;
+    margin-right: 10%;
+  }
+
+  header{
+    padding: 15px 20px;
+  }
+
+  header.sticky{
+    padding: 10px 20px;
+  }
 }
-
-@media (max-width: 1230px) {
-    .content{
-      padding: 0 60px;
-    }
-  }
-  @media (max-width: 1100px) {
-    .content{
-      padding: 0 40px;
-    }
-  }
-  @media (max-width: 900px) {
-    .content{
-      padding: 0 30px;
-    }
-  }
-  @media (max-width: 868px) {
-    body.disabled{
-      overflow: hidden;
-    }
-    .icon{
-      display: block;
-    }
-    .icon.hide{
-      display: none;
-      z-index: 2;
-    }
-    .navbar .menu-list{
-      position: fixed;
-      height: 100vh;
-      width: 70%;
-      max-width: 400px;
-      left: -100%;
-      top: 0px;
-      display: block;
-      padding: 40px 0;
-      text-align: center;
-      background: #3EB489;
-      transition: all 0.3s ease;
-    }
-    .navbar.show .menu-list{
-      left: 0%;
-    }
-    .navbar .menu-list li{
-      margin-top: 45px;
-    }
-    .navbar .menu-list li a{
-      font-size: 23px;
-      margin-left: -100%;
-      transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-    }
-    .navbar.show .menu-list li a{
-      margin-left: 0px;
-    }
-
-    .navbar .logo img{
-        width: 40%;
-    }
-    
-    .icon img{
-        width: 100%;
-        max-width: 40px;
-    }
-
-    ::-webkit-scrollbar {
-      width: 0px;
-  }
-  ::-webkit-scrollbar-track {
-      background: #3EB489;
-  }
-  ::-webkit-scrollbar-thumb {
-      background: white;
-  }
-  }
